<resources>
    <string name="app_name" translatable="false">Bill Book</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="username">Username</string>
    <string name="passward">Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quit_bill_title" translatable="false">Quit Billing</string>
    <string name="edit_bill_title" translatable="false">Quit Editing?</string>
    <string name="quit_bill" translatable="false">Are you sure you want to cancel billing?</string>
    <string name="edit_bill" translatable="false">Are you sure you want to quit? Your changes will not be saved.</string>
    <string name="quit_yes" translatable="false">Yes, Cancel</string>
    <string name="edit_yes" translatable="false">Yes, Quit</string>
    <string name="quit_no" translatable="false">No</string>
    <string name="edit_no" translatable="false">No</string>
    <string name="alert">Alert</string>
    <string name="expense_date">Date<font color='#ff0000'>*</font></string>
    <string name="preference_file_key">MarketExcelAppPref</string>
    <string name="invoicesOffline">invoicesOffline</string>
    <string name="user_login_token">UserLoginToken</string>
    <string name="showGST">showGST</string>
    <string name="InVoiceNumber">InVoiceNumber</string>
    <string name="InVoiceNumberForNonGST">InVoiceNumberNonGST</string>
    <string name="showGstPopup">ShowGstPopup</string>
    <string name="login_user_id">LoginUserId</string>
    <string name="userDetails">UserDetails</string>
    <string name="selected_categories">SelectedCategories</string>
    <string name="isGSTVerified">GSTVerified</string>
    <string name="user_profile">User Profile</string>
    <string name="profileShopName">Enter Business/Shop Name<font color='#ff0000'>*</font></string>
    <string name="profileShopAddress">Enter Business/Shop Address<font color='#ff0000'>*</font></string>
    <string name="Setting">Setting</string>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="shop_details">Shop Details</string>
    <string name="add_product">Add Model</string>
    <string name="billing">Billing</string>
    <string name="categories">Categories</string>
    <string name="Products">Models</string>
    <string name="brands">Brands</string>
    <string name="manage_inventory">Expense</string>
    <string name="no_internet">Check Internet Connection</string>
    <string name="expenses">Expenses</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="select_category">Select Category</string>
    <string name="select_brand">Select Brand</string>
    <string name="select_product">Select Model</string>
    <string name="product_count">Model Count</string>
    <string name="select_distributor">Select Distributor</string>
    <string name="product_price">Purchase Price</string>
    <string name="selling_price">Selling Price</string>
    <string name="do_u_want_to_logout">Do You Really Want To Logout ?</string>
    <string name="todays_sell" translatable="false">Today"'"s Sell</string>
    <string name="yesterdays_sell">Yesterdays Sell</string>
    <string name="Rs">\u20B9</string>
    <string name="enter_name">Customer Name (Optional)</string>
    <string name="enter_username">Enter Username Here</string>
    <string name="enter_msg_hint">Enter Message to be sent for marketing</string>
    <string name="enter_address">Enter Address Here</string>
    <string name="ct_enter_address">Customer Address(optional)</string>
    <string name="ct_enter_address_otp">Customer Address</string>
    <string name="enter_city">Enter City Here</string>
    <string name="schedule_date" translatable="false">scheduleDate</string>
    <string name="enter_pinCode">Enter Pin Code Here</string>
    <string name="enter_state">Enter State Here</string>
    <string name="enter_mob_no">Enter mobile number</string>
    <string name="enter_mob_no_otp">Mobile No (Optional)</string>
    <string name="enter_ur_mob_no">Enter Your Mobile Number</string>
    <string name="enter_contact__no">Enter Contact Number</string>
    <string name="enter_rate_if_want">Enter Unit Price</string>
    <string name="enter_quantities">Units sold</string>
    <string name="hsnNo">HSN Code</string>
    <string name="enter_hsnNo">HSN Code (optional)</string>
    <string name="qty">Quantity<font color='#ff0000'>*</font> </string>
    <string name="current_invoice_id">invoice_id</string>
    <string name="name_of_models_services">Items For Billing</string>
    <string name="details_of_receiver_bill">Details Of Customer | Bill</string>
    <string name="invoice_no">Invoice No</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="items">Items</string>
    <string name="name">Customer Name </string>
    <string name="IMEI_enter">IMEI/S.No of Product (Optional) </string>
    <string name="nameAndemail">Name &amp; Email</string>
    <string name="address">Address</string>
    <string name="discountBilling">Discount</string>
    <string name="city_without_asterisk">City</string>
    <string name="city">City<font color='#ff0000'>*</font></string>
    <string name="state_without_asterisk">State</string>
    <string name="state">State<font color='#ff0000'>*</font></string>
    <string name="scan"><font color='#266CE4'>Scan</font></string>
    <string name="mobile_no">Contact Number</string>
    <string name="mobile_noo">Mobile Number</string>
    <string name="paymentValue1">Amount</string>
    <string name="paymentMethod1Title">Payment Mode Amount</string>
    <string name="customer_gst">Customer GST</string>
    <string name="paymentMethod">Payment Mode1</string>
    <string name="paymentMethod1">Payment Mode2</string>
    <string name="enter_gst">GST %<font color='#ff0000'>*</font> </string>
    <string name="select_gst_type">GST Type</string>
    <string name="select_gst_percenatge">GST %</string>
    <string name="enter_igst">Enter IGST</string>
    <string name="amount_before_tax_rs">Amount Before GST (Rs) :</string>
    <string name="sgst">SGST :</string>
    <string name="gst">GST (Rs) :</string>
    <string name="gst_dt">GST Details</string>
    <string name="kgst">KGST :</string>
    <string name="total_rs">Total (Rs) :</string>
    <string name="DiscountEnterPercentage">Percentage %</string>
    <string name="DiscountEnterPrice">Amount (Rs)</string>
    <string name="submit">Submit</string>
    <string name="enter_product_name">Enter Product Name Here</string>
    <string name="title_activity_send_pdf">SendPDFActivity</string>
    <string name="print">Print</string>
    <string name="share_">Share</string>
    <string name="share">Share on Whatsapp</string>
    <string name="sms">SMS</string>
    <string name="close">Close</string>
    <string name="filter">Filter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ledger_detail">Report</string>
    <string name="selling_detail">Selling Detail</string>
    <string name="discount">Add Discount</string>
    <string name="category">Category</string>
    <string name="brand">Brand</string>
    <string name="product">Model</string>
    <string name="enter_count">Enter Count</string>
    <string name="enter_price_including_gst">Enter Price including GST</string>
    <string name="bill_no">Enter bill number</string>
    <string name="enter_price">Enter Price </string>
    <string name="price_including_gst">Price including GST<font color='#ff0000'>*</font> </string>
    <string name="description">Description<font color='#ff0000'>*</font> </string>
    <string name="enter_selling_price">Enter Selling Price</string>
    <string name="price">Price<font color='#ff0000'>*</font></string>
    <string name="enter_price_including_gst_bs">Price including GST<font color='#ff0000'>*</font> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="email">Enter Email Address (optional)</string>
    <string name="getsalesreport">Get Sales Report</string>
    <string name="reset_password_screen">Change Password</string>
    <string name="pswd_error">New Password Should Contain 6 &#45; 25 Characters Without Space</string>
    <string name="error_blank_old_password">Please Enter Current Password</string>
    <string name="error_blank_new_password">Please Enter New Password</string>
    <string name="error_blank_confirm_password">Please Enter Confirm Password</string>
    <string name="error_match_password">New Password And Confirm Password Does Not Match</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_old_password">Current Password</string>
    <string name="sync_warning_home">Please turn on the Internet to sync your data</string>
    <string name="sync_warning_expense">There are some expenses to be synced. Please check your internet and restart the application</string>
    <string name="search">Search</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="inv_pref">Invoice</string>
    <string name="amount">Amount</string>
    <string name="expense_amount">Amount (₹)<font color='#ff0000'>*</font></string>
    <string name="enter_amount">Enter Amount</string>
    <string name="changePass">Submit</string>
    <string name="selectdate">Select Date</string>
    <string name="search_invoice">Search Bills</string>
    <string name="sales_report">Day Book</string>
    <string name="send_SMS">Send SMS</string>
    <string name="other">Other</string>
    <string name="please_enter_category">Please enter category</string>
    <string name="please_enter_brand">Please enter Brand</string>
    <string name="please_enter_product">Please enter Product</string>
    <string name="product_added_successfuly">Product Added Successfully</string>
    <string name="category_added_successfuly">Category Added Successfully</string>
    <string name="brand_added_successfuly">Brand Added Successfully</string>
    <string name="shopName">Enter Business/Shop name </string>
    <string name="shopNameEnt">Business/Shop name <font color='#ff0000'>*</font> </string>
    <string name="item_name">Product/Service Name </string>
    <string name="item_name_d">Product/Service Name </string>
    <string name="item_name_title">Item Name<font color='#ff0000'>*</font> </string>
    <string name="shopAddress">Enter Business/Shop Address</string>
    <string name="shopAddressEnt">Business/Shop Address <font color='#ff0000'>*</font></string>
    <string name="landLineNo">Enter Land Line Number</string>
    <string name="mobileNo">Enter Mobile Number </string>
    <string name="pinCode">Pincode<font color='#ff0000'>*</font></string>
    <string name="secondaryMobileNo">Enter Secondary Mobile Number</string>
    <string name="firstName">Enter First Name </string>
    <string name="lastName">Enter Last Name </string>
    <string name="gstNumber">Enter GST Number</string>
    <string name="otpEnter">Enter OTP</string>
    <string name="memberCode">Enter Member Code</string>
    <string name="dist_name">Distributor Name </string>
    <string name="dist_address">Address </string>
    <string name="dist_gst">GST No </string>
    <string name="dist_contact">Mobile no </string>
    <string name="amount_to_add">Amount to add</string>
    <string name="description_about_expense">Description about expense</string>
    <string name="cancel">CANCEL</string>
    <string name="add">Add</string>
</resources>