<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:id="@+id/addExpenseLayout"
    tools:context=".activities.ExpenseActivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:paddingRight="20dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/add_expenses" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/borderOpaque"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expenseNameLayout"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#555555"
            android:layout_height="wrap_content"
            android:text="@string/expense_amount" />
        <EditText
            android:textColor="#0A0A0A"
            android:id="@+id/expenseAmount"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_to_add"
            android:singleLine="true"
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/selectDateLayout"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#555555"
                android:layout_height="wrap_content"
                android:id="@+id/selectDateq"
                android:text="@string/expense_date" />
            <TextView
                android:textColor="#0A0A0A"
                android:id="@+id/selectDate"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_calendar_today"
                android:onClick="showDatePickerDialog"
                android:singleLine="true"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/addDescriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="#555555"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/expenseName"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:maxLength="150"
                android:hint="@string/description_about_expense"
                android:textColor="#0A0A0A"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/cancelExpense"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:text="@string/cancel"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/add_item_structure"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/addNewExpense"
            android:layout_weight="3"
            android:background="@drawable/login_button_structure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:text="@string/add"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_margin="20dp" />

    </LinearLayout>
</LinearLayout>