<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="wrap_content">
<TableRow
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10"
    android:layout_marginTop="10dp"
    android:padding="5dp"
    >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="4"
        android:gravity="left|center"
        android:text="@string/item_name_title"
        android:textSize="15sp"
        android:textStyle="bold" />


    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/itemNameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:background="@drawable/edt_background"
        android:hint="@string/item_name"
        android:inputType="text"
        android:textColor="@color/grey"
        android:padding="5dp"
        android:singleLine="true"
        android:textSize="15sp" />
</TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        >

        <TextView
            android:id="@+id/priceLblTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:gravity="left|center"
            android:text="@string/enter_price_new"
            android:textSize="15sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/itemPriceET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@drawable/edt_background"
            android:hint="@string/enter_price"
            android:inputType="numberDecimal"
            android:maxLength="50"
            android:layout_marginRight="10dp"
            android:textColor="@color/grey"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="15sp" />
    </TableRow>
    <TableRow
        android:id="@+id/gstPerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="10">

        <TextView
            android:id="@+id/gstPercentageTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/enter_gst"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/gstPercentage"
            android:layout_width="0dp"
            android:layout_height="@dimen/add_product_spinner_height"
            android:layout_weight="6"
            android:background="@drawable/spinnerbg"
            android:entries="@array/gstPercentage"
            android:inputType="phone"
            android:maxLength="10"
            style="@style/mySpinnerItemStyle"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="11dp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:gravity="left|center"
            android:text="@string/qty"
            android:textSize="15sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/itemQtyET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/edt_background"
            android:hint="@string/enter_quantities"
            android:inputType="numberDecimal"
            android:maxLength="50"
            android:layout_marginEnd="10dp"
            android:textColor="@color/grey"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="15sp" />
        <Spinner
            android:id="@+id/unit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="3"
            android:background="@drawable/spinnerbg"
            android:entries="@array/measurementUnit"
            android:inputType="phone"
            android:maxLength="4"
            android:fadeScrollbars="false"
            style="@style/mySpinnerForUnit"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="11dp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:gravity="left|center"
            android:text=" IMEI/Serial Number"
            android:textSize="15sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/imeiNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/edt_background"
            android:hint="@string/IMEI_enter"
            android:inputType="text|number"
            android:maxLength="50"
            android:textColor="@color/grey"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="15sp" />
        <ImageView
            android:id="@+id/btnScan"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="scanCode"
            android:src="@drawable/ic_scanning"
            ></ImageView>
    </TableRow>

    <TableRow
        android:id="@+id/hsnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:gravity="left|center"
            android:text="@string/hsnNo"
            android:textSize="15sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/hsnNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@drawable/edt_background"
            android:hint="@string/enter_hsnNo"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/grey"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="15sp" />
    </TableRow>
    <Button
        android:id="@+id/addItem"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:text="Add Item"
        android:onClick="addItem"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:layout_margin="2dp"
        android:layout_height="wrap_content" />
</LinearLayout>