<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical|left"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="5"
        android:padding="10dp"
        android:text="@string/alert"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/positive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewText"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/square_ripple_effect"
        android:gravity="center"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/negative_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewText"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/square_ripple_effect"
        android:gravity="center"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</RelativeLayout>